<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.canwdev.zephyr.AboutActivity">

    <ScrollView
        android:id="@+id/scrollView_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/CardView_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/def_margin"
                android:background="@android:color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/card_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/textView6"
                        android:layout_toRightOf="@+id/textView6"
                        android:paddingBottom="@dimen/text_margin"
                        android:paddingRight="@dimen/text_margin"
                        android:paddingTop="@dimen/text_margin"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:paddingBottom="@dimen/text_margin"
                        android:paddingLeft="@dimen/text_margin"
                        android:paddingRight="4dp"
                        android:paddingTop="@dimen/text_margin"
                        android:text="@string/activity_about"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view_card_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/card_about"
                        android:background="@color/cardview_shadow_start_color" />

                    <LinearLayout
                        android:id="@+id/ll_card_about1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:orientation="horizontal"
                        android:layout_below="@+id/view_card_line"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            app:srcCompat="@drawable/ic_cloud_circle_black_24dp" />

                        <TextView
                            android:id="@+id/textView_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:layout_weight="1"
                            android:text="" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/def_margin"
                            android:fontFamily="cursive"
                            android:padding="5dp"
                            android:text="@string/about_developer" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_card_about2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_card_about1"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            app:srcCompat="@drawable/ic_info_black_24dp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:layout_weight="1"
                            android:text="@string/about_info" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/card_goGithub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_card_about2"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:onClick="card_goGithub"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:src="@drawable/ic_code_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:text="@string/about_github" />
                    </LinearLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
